# tg-box-reporter

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.example.yml  docker-compose.shared-network.example.yml  pyproject.toml
contrib/env/: collector.env.example  relay.env.example
contrib/systemd/: tg-box-collector.service  tg-box-relay.service
tests/: test_alerts.py  test_collector.py  test_events.py  test_formatting.py  test_relay.py  test_snapshot.py
tg_box_reporter/: alerts.py  collector.py  config.py  events.py  formatting.py  projections.py  relay.py  relay_health.py  snapshot.py  telegram_api.py
